# ZAD_2_zmpo

./: CMakeLists.txt  CMenu.cpp  CMenu.h  CMenuCommand.cpp  CMenuCommand.h  CMenuItem.h  main.cpp
CTABLE/: AddObject.cpp  CTable.cpp  CTable.h  Zad1.cpp
